# M-AI-SELF-PC-

./: .env.example  .gitignore  README.md  TASKS.md  pyproject.toml
data/: sample.csv
docs/: agent-setup.md  architecture.md  next-steps.md  plan.md
infra/systemd/: m-ai-self-pc-updater.service  m-ai-self-pc-updater.timer
scripts/: setup_agent.sh  train_model.py  update_client.sh
src/: config.py  data.py  model.py  tracking.py  train.py
src/serve/: __init__.py  app.py
tests/: test_api.py  test_tracking.py  test_train_metrics.py  test_training.py
