[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m-ai-self-pc"
version = "0.1.0"
description = "ML-first baseline scaffold with training and serving"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
ml = [
  "mlflow>=2.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
